--- a/certifications.html
+++ b/certifications.html
@@ -19,6 +19,22 @@ layout: page
   </thead>
   <tbody>
     <tr>
+      <th scope="row">Foundation in Design Thinking</th>
+      <td>IDEO</td>
+      <td>April 2020</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row">ITIL Foundation Certificate</th>
+      <td>PeopleCert & Axelos</td>
+      <td>November 2016</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
       <th scope="row">Innovation Management</th>
       <td>Erasmus Universiteit Rotterdam</td>
       <td>April 2020</td>
