--- a/certifications.html
+++ b/certifications.html
@@ -19,7 +19,7 @@ layout: page
   </thead>
   <tbody>
     <tr>
-      <th scope="row">Foundation in Design Thinking</th>
+      <th scope="row"><a target="_blank" href="/attachment/.pdf">Foundation in Design Thinking</th>
       <td>IDEO</td>
       <td>April 2020</td>
       <td>No expiration</td>
@@ -33,6 +33,23 @@ layout: page
       <td>No expiration</td>
     </tr>
   </tbody>
+</table>
+
+
+<div class="row">
+  <div class="col-lg-12">
+    <h3>Courses</h3>
+  </div>
+</div>
+  <table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Title</th>
+      <th scope="col">Institute</th>
+      <th scope="col">Issued</th>
+      <th scope="col">Expiration</th>
+    </tr>
+  </thead>
   <tbody>
     <tr>
       <th scope="row">Innovation Management</th>
