--- a/certifications.html
+++ b/certifications.html
@@ -19,7 +19,7 @@ layout: page
   </thead>
   <tbody>
     <tr>
-      <th scope="row"><a target="_blank" href="/attachment/.pdf">Foundation in Design Thinking</th>
+      <th scope="row"><a target="_blank" href="/attachment/FoundationsInDesignThinkingCertificate.pdf">Foundation in Design Thinking</a></th>
       <td>IDEO</td>
       <td>April 2020</td>
       <td>No expiration</td>
@@ -27,7 +27,7 @@ layout: page
   </tbody>
   <tbody>
     <tr>
-      <th scope="row">ITIL Foundation Certificate</th>
+      <th scope="row"><a target="_blank" href="/attachment/ITIL-Certification.pdf">ITIL Foundation Certificate</a></th>
       <td>PeopleCert & Axelos</td>
       <td>November 2016</td>
       <td>No expiration</td>
