--- a/certifications.html
+++ b/certifications.html
@@ -59,7 +59,7 @@ layout: page
   </tbody>
   <tbody>
     <tr>
-      <th scope="row">Big Data Specialisation</th>
+      <th scope="row"><a target="_blank" href="https://coursera.org/share/479ae34f5312be1aa83a1a7f41e901c0">Big Data Specialisation</a></th>
       <td>UC Davis</td>
       <td>April 2020</td>
       <td>No expiration</td>
