--- a/certifications.html
+++ b/certifications.html
@@ -51,7 +51,7 @@ layout: page
   </thead>
   <tbody>
     <tr>
-      <th scope="row">Innovation Management</th>
+      <th scope="row"><a target="_blank" href="https://coursera.org/share/45da319917f2fdf2ee949d79f424f657">Innovation Management</a></th>
       <td>Erasmus Universiteit Rotterdam</td>
       <td>April 2020</td>
       <td>No expiration</td>
