--- a/certifications.html
+++ b/certifications.html
@@ -65,4 +65,36 @@ layout: page
       <td>No expiration</td>
     </tr>
   </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://c46e136a583f7e334124-ac22991740ab4ff17e21daf2ed577041.ssl.cf1.rackcdn.com/Certificate/ScrumFundamentalsCertified-EliaBellussi-771658.pdf">Scrum Fundamentals Certified</a></th>
+      <td>Scrum Study</td>
+      <td>April 2020</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://analytics.google.com/analytics/academy/certificate/7fkopXg0RUWYwAkZwd146g">Advanced Google Analytics</a></th>
+      <td>UC Davis</td>
+      <td>Google Analytics Academy</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://analytics.google.com/analytics/academy/certificate/yds7retDSayLFCa_IZVZuQ">Google Analytics for Beginners</a></th>
+      <td>Google Analytics Academy</td>
+      <td>October 2019</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://coursera.org/share/479ae34f5312be1aa83a1a7f41e901c0">Alternative Finance</a></th>
+      <td>Politecnico di Milano</td>
+      <td>January 2020</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
 </table>
