--- a/certifications.html
+++ b/certifications.html
@@ -75,9 +75,17 @@ layout: page
   </tbody>
   <tbody>
     <tr>
+      <th scope="row"><a target="_blank" href="https://coursera.org/share/479ae34f5312be1aa83a1a7f41e901c0">Alternative Finance</a></th>
+      <td>Politecnico di Milano</td>
+      <td>January 2020</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
       <th scope="row"><a target="_blank" href="https://analytics.google.com/analytics/academy/certificate/7fkopXg0RUWYwAkZwd146g">Advanced Google Analytics</a></th>
-      <td>UC Davis</td>
       <td>Google Analytics Academy</td>
+      <td>October 2019</td>
       <td>No expiration</td>
     </tr>
   </tbody>
@@ -91,9 +99,9 @@ layout: page
   </tbody>
   <tbody>
     <tr>
-      <th scope="row"><a target="_blank" href="https://coursera.org/share/479ae34f5312be1aa83a1a7f41e901c0">Alternative Finance</a></th>
-      <td>Politecnico di Milano</td>
-      <td>January 2020</td>
+      <th scope="row"><a target="_blank" href="https://coursera.org/share/479ae34f5312be1aa83a1a7f41e901c0">Gamification</a></th>
+      <td>Whartan - University of Pennsylvania</td>
+      <td>October 2019</td>
       <td>No expiration</td>
     </tr>
   </tbody>
