--- a/certifications.html
+++ b/certifications.html
@@ -105,4 +105,44 @@ layout: page
       <td>No expiration</td>
     </tr>
   </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://courses.edx.org/certificates/da1a089be80b406c8ea7dfd79c8aa7ff">Becoming an Entrepreneur</a></th>
+      <td>MITx - MIT</td>
+      <td>September 2019</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.credential.net/84e1e916-3725-4213-ada4-5f262809686d">Understanding Blockchain Technology: The Cost and Benefits of Decentralization</a></th>
+      <td>IEEE</td>
+      <td>November 2018</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.credential.net/40cdf4e4-31ee-4d9a-a82c-85fad3f54759">Understanding Blockchain Technology: Abstracting the Blockchain</a></th>
+      <td>IEEE</td>
+      <td>November 2018</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.credential.net/cf9480a7-1943-4d64-8346-f25fb4a3c5b8">Understanding Blockchain Technology: The Bitcoin Case Study</a></th>
+      <td>IEEE</td>
+      <td>November 2018</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://courses.edx.org/certificates/da1a089be80b406c8ea7dfd79c8aa7ff">Financial Markets</a></th>
+      <td>Yale</td>
+      <td>September 2018</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
 </table>
