--- a/certifications.html
+++ b/certifications.html
@@ -86,7 +86,7 @@ layout: page
       <th scope="row"><a target="_blank" href="https://analytics.google.com/analytics/academy/certificate/7fkopXg0RUWYwAkZwd146g">Advanced Google Analytics</a></th>
       <td>Google Analytics Academy</td>
       <td>October 2019</td>
-      <td>No expiration</td>
+      <td>October 2022</td>
     </tr>
   </tbody>
   <tbody>
@@ -94,7 +94,7 @@ layout: page
       <th scope="row"><a target="_blank" href="https://analytics.google.com/analytics/academy/certificate/yds7retDSayLFCa_IZVZuQ">Google Analytics for Beginners</a></th>
       <td>Google Analytics Academy</td>
       <td>October 2019</td>
-      <td>No expiration</td>
+      <td>October 2022</td>
     </tr>
   </tbody>
   <tbody>
@@ -142,6 +142,22 @@ layout: page
       <th scope="row"><a target="_blank" href="https://courses.edx.org/certificates/da1a089be80b406c8ea7dfd79c8aa7ff">Financial Markets</a></th>
       <td>Yale</td>
       <td>September 2018</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/77Q6S7RG4A6M">Arts and Heritage Management</a></th>
+      <td>Università Commerciale Luigi Bocconi</td>
+      <td>August 2018</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/L327DLBY4WBR">International Leadership and Organizational Behavior</a></th>
+      <td>Università Commerciale Luigi Bocconi</td>
+      <td>October 2017</td>
       <td>No expiration</td>
     </tr>
   </tbody>
