--- a/certifications.html
+++ b/certifications.html
@@ -157,7 +157,63 @@ layout: page
     <tr>
       <th scope="row"><a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/L327DLBY4WBR">International Leadership and Organizational Behavior</a></th>
       <td>Università Commerciale Luigi Bocconi</td>
-      <td>October 2017</td>
+      <td>September 2017</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/e4fcad5c-64f6-40fc-a969-499eaa47">MongoDB for Java Developers</a></th>
+      <td>MongoDB</td>
+      <td>September 2017</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/69f7abe1-edfe-4d8f-b74d-8a662eba">MongoDB for Developers</a></th>
+      <td>MongoDB</td>
+      <td>September 2017</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/6889a592-2d25-4f7c-bc34-7eb5cf35">MongoDB for DBAs</a></th>
+      <td>MongoDB</td>
+      <td>September 2017</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/175b6a89-aa47-4df9-acc2-eaaf20e5">MonoDB - Diagnostics and Debugging</a></th>
+      <td>MongoDB</td>
+      <td>September 2017</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/8dccf041-7f67-40f5-a4fb-e1406740">MongoDB - Security</a></th>
+      <td>MongoDB</td>
+      <td>September 2017</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/34704980-e8f0-4d06-8bd3-c677ba58">MongoDB - Performance</a></th>
+      <td>MongoDB</td>
+      <td>August 2017</td>
+      <td>No expiration</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://university.mongodb.com/course_completion/325ca890-e30a-4d87-abb5-aca4a595">MongoDB - Basics</a></th>
+      <td>MongoDB</td>
+      <td>August 2017</td>
       <td>No expiration</td>
     </tr>
   </tbody>
