--- a/certifications.html
+++ b/certifications.html
@@ -60,7 +60,7 @@ layout: page
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://coursera.org/share/479ae34f5312be1aa83a1a7f41e901c0">Big Data Specialisation</a></th>
-      <td>UC Davis</td>
+      <td>University of California - Davis</td>
       <td>April 2020</td>
       <td>No expiration</td>
     </tr>
@@ -108,7 +108,7 @@ layout: page
   <tbody>
     <tr>
       <th scope="row"><a target="_blank" href="https://courses.edx.org/certificates/da1a089be80b406c8ea7dfd79c8aa7ff">Becoming an Entrepreneur</a></th>
-      <td>MITx - MIT</td>
+      <td>MITx - Massachusetts Institute of Technology</td>
       <td>September 2019</td>
       <td>No expiration</td>
     </tr>
