--- a/education.html
+++ b/education.html
@@ -9,6 +9,13 @@ layout: page
 </div>
 <div class="row">
   <div class="col-lg-4">
+    <div class="card-header">MSc in Artificial Intelligence</div>
+    <div class="card-body">
+      <h4 class="card-title">Università di Torino</h4>
+      <p class="card-text">Oct 2011 - Orc 2021</p>
+    </div>
+  </div>
+  <div class="col-lg-4">
     <div class="card-header">MSc in Disruptive Innovation</div>
     <div class="card-body">
       <h4 class="card-title">HULT International Business School</h4>
@@ -22,6 +29,8 @@ layout: page
       <p class="card-text">Sep 2018 - Aug 2019: Track on Project Management and Marketing & Sales</p>
     </div>
   </div>
+</div>
+<div class="row">
   <div class="col-lg-4">
     <div class="card-header">BSc in Computer Science</div>
     <div class="card-body">
