--- a/education.html
+++ b/education.html
@@ -12,7 +12,7 @@ layout: page
     <div class="card-header">MSc in Artificial Intelligence</div>
     <div class="card-body">
       <h4 class="card-title">Università di Torino</h4>
-      <p class="card-text">Oct 2011 - Orc 2021</p>
+      <p class="card-text">Oct 2011 - Expected 2021</p>
     </div>
   </div>
   <div class="col-lg-4">
