--- a/presentations.html
+++ b/presentations.html
@@ -14,10 +14,11 @@ layout: page
 	  <div class="card-body">
 	    <h5 class="card-title">Design Thinking</h5>
 	    <h6 class="card-subtitle text-muted">An agile approach</h6>
-	    <h7 class="card-subtitle text-muted">Italian Version</h7>
 	  </div>
-  	<a href="/attachment/2020-05-03_GDGDevPartyTogether_DesignThinking.pdf" target="_blank">
-  		<img style="height: 200px; width: 100%; display: block;" src="/attachment/DesignThinking.png" alt="Presentation on Design Thinking">
-  	</a>
+  	<img style="height: 200px; width: 100%; display: block;" src="/attachment/DesignThinking.png" alt="Presentation on Design Thinking">
+  	<div class="card-body">
+    	<p class="card-text">Italian version from GDG DevePary Italy - May 2020.</p>
+    	<a href="/attachment/2020-05-03_GDGDevPartyTogether_DesignThinking.pdf" target="_blank" class="card-link">Presentation link</a>
+  	</div>
 	</div>
 </div>
