--- a/presentations.html
+++ b/presentations.html
@@ -18,7 +18,7 @@ layout: page
   	<img style="height: 200px; width: 100%; display: block;" src="/attachment/DesignThinking.png" alt="Presentation on Design Thinking">
   	<div class="card-body">
     	<p class="card-text">Italian version from GDG DevePary Italy - May 2020.</p>
-    	<a href="/attachment/2020-05-03_GDGDevPartyTogether_DesignThinking.pdf" target="_blank" class="card-link">Presentation link</a>
+    	<a href="/attachment/2020-05-03_GDGDevPartyTogether_DesignThinking.pdf" target="_blank" class="card-link">Download</a>
   	</div>
 	</div>
 </div>
