--- a/presentations.html
+++ b/presentations.html
@@ -15,7 +15,7 @@ layout: page
 	    <h5 class="card-title">Design Thinking</h5>
 	    <h6 class="card-subtitle text-muted">An agile approach</h6>
 	  </div>
-  	<img style="height: 200px; width: 100%; display: block;" src="/attachment/DesignThinking.png" alt="Presentation on Design Thinking">
+  	<img style="height: 200px; width: 100%; max-width: 20rem; display: block;" src="/attachment/DesignThinking.png" alt="Presentation on Design Thinking">
   	<div class="card-body">
     	<p class="card-text">Italian version from GDG DevePary Italy - May 2020.</p>
     	<a href="/attachment/2020-05-03_GDGDevPartyTogether_DesignThinking.pdf" target="_blank" class="card-link">Download</a>
