--- a/articles.html
+++ b/articles.html
@@ -7,3 +7,23 @@ layout: page
     <h2>Articles</h2>
   </div>
 </div>
+
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Title</th>
+      <th scope="col">Magazine</th>
+      <th scope="col">Issued</th>
+      <th scope="col">Language</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.industry4business.it/industria-4-0/design-thinking-e-scenario-planning-comprenderli-per-applicarli-nella-trasformazione-digitale/">Design thinking e scenario planning, comprenderli per applicarli nella trasformazione digitale</a></th>
+      <td>Industry4Business</td>
+      <td>April 2020</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
+</table>
+
