--- a/presentations.html
+++ b/presentations.html
@@ -9,7 +9,7 @@ layout: page
 </div>
 
 <div class="row">
-	<div class="card mb-3">
+	<div class="card mb-3 text-center">
 	  <h3 class="card-header">Product Management</h3>
 	  <div class="card-body">
 	    <h5 class="card-title">Design Thinking</h5>
