--- a/articles.html
+++ b/articles.html
@@ -22,7 +22,9 @@ layout: page
       <th scope="row">
       	<a target="_blank" href="https://www.industry4business.it/industria-4-0/design-thinking-e-scenario-planning-comprenderli-per-applicarli-nella-trasformazione-digitale/">Design thinking e scenario planning, comprenderli per applicarli nella trasformazione digitale</a>
       </th>
-      <td>Industry4Business</td>
+      <td>
+      	<a target="_blank" href="https://www.industry4business.it/">Industry4Business</a>
+      </td>
       <td>April 2020</td>
       <td>Italian</td>
     </tr>
