--- a/presentations.html
+++ b/presentations.html
@@ -9,16 +9,14 @@ layout: page
 </div>
 
 <div class="row">
-	<div class="card mb-3 text-center">
+	<div class="card mb-3">
 	  <h3 class="card-header">Product Management</h3>
 	  <div class="card-body">
 	    <h5 class="card-title">Design Thinking</h5>
 	    <h6 class="card-subtitle text-muted">An agile approach</h6>
-	  </div>
-  	<img style="height: 200px; width: 100%; max-width: 20rem; display: block;" src="/attachment/DesignThinking.png" alt="Presentation on Design Thinking">
-  	<div class="card-body">
+	  	<img style="height: 200px; width: 100%; max-width: 20rem; display: block;" src="/attachment/DesignThinking.png" alt="Presentation on Design Thinking">
     	<p class="card-text">Italian version from GDG DevePary Italy - May 2020.</p>
     	<a href="/attachment/2020-05-03_GDGDevPartyTogether_DesignThinking.pdf" target="_blank" class="card-link">Download</a>
-  	</div>
+  	  </div>
 	</div>
 </div>
