--- a/presentations.html
+++ b/presentations.html
@@ -13,7 +13,7 @@ layout: page
 	  <h3 class="card-header">Product Management</h3>
 	  <div class="card-body">
 	    <h5 class="card-title">Design Thinking</h5>
-	    <h6 class="card-subtitle text-muted">An agile approach</h6>
+	    <h6 class="card-subtitle text-muted">An agile approach to product development</h6>
 	  	<img style="height: 200px; width: 100%; display: block;" src="/attachment/DesignThinking.png" alt="Presentation on Design Thinking">
     	<p class="card-text">Italian version from GDG DevePary Italy - May 2020.</p>
     	<a href="/attachment/2020-05-03_GDGDevPartyTogether_DesignThinking.pdf" target="_blank" class="card-link">Download</a>
