--- a/presentations.html
+++ b/presentations.html
@@ -19,4 +19,14 @@ layout: page
     	<a href="/attachment/2020-05-03_GDGDevPartyTogether_DesignThinking.pdf" target="_blank" class="card-link">Download</a>
   	  </div>
 	</div>
+	<div class="card mb-3">
+	  <h3 class="card-header">Product Management</h3>
+	  <div class="card-body">
+	    <h5 class="card-title">Design Thinking</h5>
+	    <h6 class="card-subtitle text-muted">an Agile Approach - Ten Tips Talk</h6>
+	  	<img style="height: 200px; width: 100%; display: block;" src="/attachment/TenTipsOnDesignThinking.png" alt="Presentation on Design Thinking">
+    	<p class="card-text">Italian version from Rinascita Digitale: Ten Tips Talk - May 2020.</p>
+    	<a href="/attachment/2020-05-13_TenTipsOnDesignThinking.pdf" target="_blank" class="card-link">Download</a>
+  	  </div>
+	</div>
 </div>
