--- a/motivation.html
+++ b/motivation.html
@@ -9,7 +9,25 @@ layout: page
 </div>
 
 <div class="row">
-	<div class="col-lg-12">
-		<p></p>
-	</div>
+  <div class="col-lg-12">
+    <h3>Conferences</h3>
+  </div>
 </div>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Title</th>
+      <th scope="col">Event</th>
+      <th scope="col">Date</th>
+      <th scope="col">Language</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://2019.festivaltecnologia.it/sessioni/i-50-anni-di-arpanet-dal-conflitto-nucleare-alla-rete-pervasiva">I 50 anni di Arpanet: dal conflitto nucleare alla rete pervasiva</th>
+      <td>Festival della Tecnologia</td>
+      <td>November 2019</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
+</table>
