--- a/certifications.html
+++ b/certifications.html
@@ -40,7 +40,7 @@ layout: page
     <h3>Courses</h3>
   </div>
 </div>
-  <table class="table table-hover">
+<table class="table table-hover">
   <thead>
     <tr>
       <th scope="col">Title</th>
@@ -51,8 +51,7 @@ layout: page
   </thead>
   <tbody>
     <tr>
-      <th scope="row"><a target="_blank" href="https://coursera.org/share/f7f1503106a3632d1ab2d99923c91de5">Design-Led Strategy: Design thinking for business strategy and entrepreneurship
-</a></th>
+      <th scope="row"><a target="_blank" href="https://coursera.org/share/f7f1503106a3632d1ab2d99923c91de5">Design-Led Strategy: Design thinking for business strategy and entrepreneurship</a></th>
       <td>The University of Sydney</td>
       <td>May 2020</td>
       <td>No expiration</td>
