--- a/motivation.html
+++ b/motivation.html
@@ -24,6 +24,14 @@ layout: page
   </thead>
   <tbody>
     <tr>
+      <th scope="row"><a target="_blank" href="https://www.gdgdevparty.it/schedule/2020-05-03">Design Thinking: un approccio agile allo sviluppo del software</th>
+      <td>GDG DevParty Together 2020</td>
+      <td>May 2020</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
       <th scope="row"><a target="_blank" href="https://2019.festivaltecnologia.it/sessioni/i-50-anni-di-arpanet-dal-conflitto-nucleare-alla-rete-pervasiva">I 50 anni di Arpanet: dal conflitto nucleare alla rete pervasiva</th>
       <td>Festival della Tecnologia</td>
       <td>November 2019</td>
