--- a/motivation.html
+++ b/motivation.html
@@ -24,6 +24,14 @@ layout: page
   </thead>
   <tbody>
     <tr>
+      <th scope="row"><a target="_blank" href="https://www.rinascitadigitale.it/">Design Thinking: un approccio agile</th>
+      <td>Rinascita Digitale - Ten Tips Talk</td>
+      <td>May 2020</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
       <th scope="row"><a target="_blank" href="https://www.gdgdevparty.it/schedule/2020-05-03">Design Thinking: un approccio agile allo sviluppo del software</th>
       <td>GDG DevParty Together 2020</td>
       <td>May 2020</td>
