--- a/motivation.html
+++ b/motivation.html
@@ -10,7 +10,7 @@ layout: page
 
 <div class="row">
   <div class="col-lg-12">
-    <h3>Conferences</h3>
+    <h3>Events</h3>
   </div>
 </div>
 <table class="table table-hover">
