--- a/motivation.html
+++ b/motivation.html
@@ -46,4 +46,12 @@ layout: page
       <td>Italian</td>
     </tr>
   </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://it.droidcon.com/2015/sessions/arm-a-long-history/">ARM: a long history</th>
+      <td>Droidcon Italy</td>
+      <td>April 2015</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
 </table>
