--- a/motivation.html
+++ b/motivation.html
@@ -88,3 +88,59 @@ layout: page
     </tr>
   </tbody>
 </table>
+
+<div class="row">
+  <div class="col-lg-12">
+    <h3>Membership</h3>
+  </div>
+</div>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Insitution</th>
+      <th scope="col">Title</th>
+      <th scope="col">Since</th>
+      <th scope="col">To</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.ieee.org/">IEEE</th>
+      <td>Member</td>
+      <td>2010</td>
+      <td>2020</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.clubdi.org/">Club Dirigenti Informatici</th>
+      <td>Member</td>
+      <td>2015</td>
+      <td>2020</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="http://nex.to.it/">NexTo</th>
+      <td>Member</td>
+      <td>2017</td>
+      <td>2020</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="http://www.mupin.it/">Museo Piemontese dell'Informatica</th>
+      <td>Member</td>
+      <td>2019</td>
+      <td>2020</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="http://www.mupin.it/">Museo Piemontese dell'Informatica</th>
+      <td>President</td>
+      <td>2011</td>
+      <td>2018</td>
+    </tr>
+  </tbody>
+</table>
