--- a/motivation.html
+++ b/motivation.html
@@ -129,6 +129,22 @@ layout: page
   </tbody>
   <tbody>
     <tr>
+      <th scope="row"><a target="_blank" href="https://www.statigeneralinnovazione.it/online/">Stati Generali dell'Innovazione</th>
+      <td>Member</td>
+      <td>2014</td>
+      <td>2020</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="http://www.nordestdigitale.com/">Nord-est Digitale</th>
+      <td>Scientific Committee</td>
+      <td>2012</td>
+      <td>2020</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
       <th scope="row"><a target="_blank" href="http://www.mupin.it/">Museo Piemontese dell'Informatica</th>
       <td>Member</td>
       <td>2019</td>
