--- a/motivation.html
+++ b/motivation.html
@@ -153,6 +153,14 @@ layout: page
   </tbody>
   <tbody>
     <tr>
+      <th scope="row"><a target="_blank" href="https://www.aicanet.it/storia-informatica/gruppo-di-lavoro-storia-informatica">AICA</th>
+      <td>History of Computer Science Team</td>
+      <td>2017</td>
+      <td>2020</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
       <th scope="row"><a target="_blank" href="http://www.mupin.it/">Museo Piemontese dell'Informatica</th>
       <td>Member</td>
       <td>2019</td>
