--- a/motivation.html
+++ b/motivation.html
@@ -56,7 +56,7 @@ layout: page
   </tbody>
     <tbody>
     <tr>
-      <th scope="row"><a target="_blank" href="https://linuxdaytorino.org/2016/talk/talk-sys-2?l=it">Talk: Docker: distribuiamo applicazioni</th>
+      <th scope="row"><a target="_blank" href="https://linuxdaytorino.org/2016/talk/talk-sys-2?l=it">Docker: distribuiamo applicazioni</th>
       <td>Linux Day Torino</td>
       <td>October 2016</td>
       <td>Italian</td>
