--- a/experience.html
+++ b/experience.html
@@ -14,6 +14,33 @@ layout: page
     <div class="card-body">
       <h4 class="card-title">Consoft Sistemi S.p.A.</h4>
       <p class="card-text">Product Management, Project Management, Process Design & Management</p>
+      <p class="card-text">From May 2011</p>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card-header">Guest Speaker</div>
+    <div class="card-body">
+      <h4 class="card-title">Rinascita Digitale</h4>
+      <p class="card-text">Design Thinking, Data Strategy, and Scenario Planning</p>
+      <p class="card-text">From May 2020</p>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card-header">Contributing Writer</div>
+    <div class="card-body">
+      <h4 class="card-title">Gruppo Digital360</h4>
+      <p class="card-text">Articles on Design Thinking, Data Strategy, and Scenario Planning</p>
+      <p class="card-text">From Feb 2020</p>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-4">
+    <div class="card-header">Software Solution Architect - Pro Bono</div>
+    <div class="card-body">
+      <h4 class="card-title">VoiceMed</h4>
+      <p class="card-text">Web and App Development</p>
+      <p class="card-text">From Apr to May 2020</p>
     </div>
   </div>
   <div class="col-lg-4">
@@ -21,6 +48,7 @@ layout: page
     <div class="card-body">
       <h4 class="card-title">Consoft Sistemi S.p.A.</h4>
       <p class="card-text">Big Data and Analytics</p>
+      <p class="card-text">From Feb 2017 to Jul 2018</p>
     </div>
   </div>
   <div class="col-lg-4">
@@ -28,22 +56,7 @@ layout: page
     <div class="card-body">
       <h4 class="card-title">Comau S.p.A. - ESCP Business School</h4>
       <p class="card-text">How coding could impact managerial roles</p>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-lg-4">
-    <div class="card-header">Contributing Writer</div>
-    <div class="card-body">
-      <h4 class="card-title">Gruppo Digital360</h4>
-      <p class="card-text">Articles on Design Thinking, Data Strategy and Scenario Planning</p>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card-header">Software Solution Architect</div>
-    <div class="card-body">
-      <h4 class="card-title">VoiceMed</h4>
-      <p class="card-text">Web and App Development</p>
+      <p class="card-text">Feb 2017</p>
     </div>
   </div>
 </div>
