--- a/experience.html
+++ b/experience.html
@@ -54,7 +54,7 @@ layout: page
   <div class="col-lg-4">
     <div class="card-header">Guest Lecturer</div>
     <div class="card-body">
-      <h5 class="card-title">Comau & ESCP</h5>
+      <h5 class="card-title">Comau S.p.A. & ESCP</h5>
       <p class="card-text">How coding could impact managerial roles</p>
       <p class="card-text">Feb 2017</p>
     </div>
