--- a/experience.html
+++ b/experience.html
@@ -12,7 +12,7 @@ layout: page
   <div class="col-lg-4">
     <div class="card-header">Senior System Engineer</div>
     <div class="card-body">
-      <h5 class="card-title">Consoft Sistemi S.p.A.</h5>
+      <h5 class="card-title">Consoft Sistemi</h5>
       <p class="card-text">Product Management, Project Management, Process Design & Management</p>
       <p class="card-text">From May 2011</p>
     </div>
@@ -54,7 +54,7 @@ layout: page
   <div class="col-lg-4">
     <div class="card-header">Guest Lecturer</div>
     <div class="card-body">
-      <h5 class="card-title">Comau S.p.A. & ESCP Business School</h5>
+      <h5 class="card-title">Comau & ESCP Business School</h5>
       <p class="card-text">How coding could impact managerial roles</p>
       <p class="card-text">Feb 2017</p>
     </div>
