--- a/experience.html
+++ b/experience.html
@@ -46,7 +46,7 @@ layout: page
   <div class="col-lg-4">
     <div class="card-header">Corporate Business Solution Manager</div>
     <div class="card-body">
-      <h5 class="card-title">Consoft Sistemi S.p.A.</h5>
+      <h5 class="card-title">Consoft Sistemi</h5>
       <p class="card-text">Big Data and Analytics</p>
       <p class="card-text">From Feb 2017 to Jul 2018</p>
     </div>
