--- a/presentations.html
+++ b/presentations.html
@@ -11,6 +11,18 @@ layout: page
 <div class="row">
 	<div class="col-lg-4">
 		<div class="card mb-3">
+	  		<h3 class="card-header">Strategy</h3>
+	  		<div class="card-body">
+	    		<h5 class="card-title">Data Strategy</h5>
+	    		<h6 class="card-subtitle text-muted">Understanding Data Strategy</h6>
+	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-05-26_FullTalkOnDataStrategy.png" alt="Presentation on Design Thinking">
+    			<p class="card-text">Italian version from Rinascita Digitale - May 2020.</p>
+    			<a href="/attachment/2020-05-26_FullTalkOnDataStrategy" target="_blank" class="card-link">Download</a>
+  	  		</div>
+		</div>
+	</div>	
+	<div class="col-lg-4">
+		<div class="card mb-3">
 			<h3 class="card-header">Product Management</h3>
 			<div class="card-body">
 		    	<h5 class="card-title">Design Thinking</h5>
@@ -33,6 +45,9 @@ layout: page
 	  	  </div>
 		</div>
 	</div>
+</div>
+
+<div class="row">
 	<div class="col-lg-4">
 		<div class="card mb-3">
 	  		<h3 class="card-header">Product Management</h3>
