--- a/presentations.html
+++ b/presentations.html
@@ -30,6 +30,7 @@ layout: page
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/FullTalkOnDesignThinking.png" alt="Presentation on Design Thinking">
 	    		<p class="card-text">Italian version from Rinascita Digitale - May 2020.</p>
 	    		<a href="/attachment/2020-05-18_FullTalkOnDesignThinking.pdf" target="_blank" class="card-link">Download</a>
+    			<a href="https://youtu.be/w26lo9rNIIs" target="_blank" class="card-link">Video</a>
 	  	  </div>
 		</div>
 	</div>
@@ -42,6 +43,7 @@ layout: page
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/TenTipsOnDesignThinking.png" alt="Presentation on Design Thinking">
 	    		<p class="card-text">Italian version from Rinascita Digitale: Ten Tips Talk - May 2020.</p>
 	    		<a href="/attachment/2020-05-13_TenTipsOnDesignThinking.pdf" target="_blank" class="card-link">Download</a>
+	    		<a href="https://youtu.be/uklZuWJSNTs" target="_blank" class="card-link">Video</a>
 	  	  </div>
 		</div>
 	</div>
