--- a/presentations.html
+++ b/presentations.html
@@ -28,9 +28,11 @@ layout: page
 		    	<h5 class="card-title">Design Thinking</h5>
 		    	<h6 class="card-subtitle text-muted">An Agile Approach - Full Talk</h6>
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/FullTalkOnDesignThinking.png" alt="Presentation on Design Thinking">
-	    		<p class="card-text">Italian version from Rinascita Digitale - May 2020.</p>
-	    		<a href="/attachment/2020-05-18_FullTalkOnDesignThinking.pdf" target="_blank" class="card-link">Download</a>
-    			<a href="https://youtu.be/w26lo9rNIIs" target="_blank" class="card-link">Video</a>
+	    		<p class="card-text">Italian version from Rinascita Digitale - May 2020.
+	    			<a href="/attachment/2020-05-18_FullTalkOnDesignThinking.pdf" target="_blank" class="card-link">Download</a>
+	    		 | 
+    				<a href="https://youtu.be/w26lo9rNIIs" target="_blank" class="card-link">Video</a>
+    			</p>
 	  	  </div>
 		</div>
 	</div>
@@ -42,7 +44,7 @@ layout: page
 		    	<h6 class="card-subtitle text-muted">An Agile Approach - Ten Tips Talk</h6>
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/TenTipsOnDesignThinking.png" alt="Presentation on Design Thinking">
 	    		<p class="card-text">Italian version from Rinascita Digitale: Ten Tips Talk - May 2020.</p>
-	    		<a href="/attachment/2020-05-13_TenTipsOnDesignThinking.pdf" target="_blank" class="card-link">Download</a>
+	    		<a href="/attachment/2020-05-13_TenTipsOnDesignThinking.pdf" target="_blank" class="card-link">Download</a> | 
 	    		<a href="https://youtu.be/uklZuWJSNTs" target="_blank" class="card-link">Video</a>
 	  	  </div>
 		</div>
