--- a/presentations.html
+++ b/presentations.html
@@ -59,6 +59,7 @@ layout: page
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/DesignThinking.png" alt="Presentation on Design Thinking">
     			<p class="card-text">Italian version from GDG DevePary Italy - May 2020.</p>
     			<a href="/attachment/2020-05-03_GDGDevPartyTogether_DesignThinking.pdf" target="_blank" class="card-link">Download</a>
+    			<a href="https://youtu.be/uklZuWJSNTs" target="_blank" class="card-link">Video</a>
   	  		</div>
 		</div>
 	</div>	
