--- a/motivation.html
+++ b/motivation.html
@@ -24,6 +24,14 @@ layout: page
   </thead>
   <tbody>
     <tr>
+      <th scope="row"><a target="_blank" href="https://www.rinascitadigitale.it/eventi/understanding-data-strategy/">Understanding Data Strategy</th>
+      <td>Rinascita Digitale - Full Talk</td>
+      <td>May 2020</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
       <th scope="row"><a target="_blank" href="https://www.rinascitadigitale.it/eventi/design-thinking-un-approccio-agile/">Design Thinking: un approccio agile</th>
       <td>Rinascita Digitale - Full Talk</td>
       <td>May 2020</td>
