--- a/presentations.html
+++ b/presentations.html
@@ -17,7 +17,7 @@ layout: page
 	    		<h6 class="card-subtitle text-muted">Understanding Data Strategy</h6>
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-05-26_FullTalkOnDataStrategy.png" alt="Presentation on Design Thinking">
     			<p class="card-text">Italian version from Rinascita Digitale - May 2020.</p>
-    			<a href="/attachment/2020-05-26_FullTalkOnDataStrategy" target="_blank" class="card-link">Download</a>
+    			<a href="/attachment/2020-05-26_FullTalkOnDataStrategy.pdf" target="_blank" class="card-link">Download</a>
   	  		</div>
 		</div>
 	</div>	
