--- a/education.html
+++ b/education.html
@@ -20,6 +20,7 @@ layout: page
     <div class="card-body">
       <h5 class="card-title">HULT International Business School</h5>
       <p class="card-text">Sep 2019 - Mar 2020: GPA 3.61/4 with distinction</p>
+      <a href="/attachment/MScDisruptiveInnovation.jpg" target="_blank" class="card-link">Graduation Parchment</a>
     </div>
   </div>
   <div class="col-lg-4">
