--- a/education.html
+++ b/education.html
@@ -28,6 +28,7 @@ layout: page
     <div class="card-body">
       <h5 class="card-title">HULT International Business School</h5>
       <p class="card-text">Sep 2018 - Aug 2019: Track on Project Management and Marketing & Sales</p>
+      <a href="/attachment/MBAMasterBusinessAdministration.jpg" target="_blank" class="card-link">Graduation Parchment</a>
     </div>
   </div>
 </div>
