--- a/presentations.html
+++ b/presentations.html
@@ -11,11 +11,24 @@ layout: page
 <div class="row">
 	<div class="col-lg-4">
 		<div class="card mb-3">
+			<h3 class="card-header">Strategy</h3>
+			<div class="card-body">
+		    	<h5 class="card-title">Scenario Planning</h5>
+		    	<h6 class="card-subtitle text-muted">Immaginare il futuro in questo mondo di incertezze</h6>
+	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-06-03_FullTalkOnScenarioPlanning.png" alt="Presentation on Scenario Planning">
+	    		<p class="card-text">Italian version from Rinascita Digitale - June 2020.</p>
+	    		<a href="/attachment/2020-06-03_FullTalkOnScenarioPlanning.pdf" target="_blank" class="card-link">Download</a>
+	    		<a href="" target="_blank" class="card-link">Video</a>
+	  	  </div>
+		</div>
+	</div>
+	<div class="col-lg-4">
+		<div class="card mb-3">
 	  		<h3 class="card-header">Strategy</h3>
 	  		<div class="card-body">
 	    		<h5 class="card-title">Data Strategy</h5>
 	    		<h6 class="card-subtitle text-muted">Understanding Data Strategy</h6>
-	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-05-26_FullTalkOnDataStrategy.png" alt="Presentation on Design Thinking">
+	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-05-26_FullTalkOnDataStrategy.png" alt="Presentation on Data Strategy">
     			<p class="card-text">Italian version from Rinascita Digitale - May 2020.</p>
     			<a href="/attachment/2020-05-26_FullTalkOnDataStrategy.pdf" target="_blank" class="card-link">Download</a>
   	  		</div>
@@ -34,6 +47,9 @@ layout: page
          	</div>
 		</div>
 	</div>
+</div>
+
+<div class="row">
 	<div class="col-lg-4">
 		<div class="card mb-3">
 			<h3 class="card-header">Product Management</h3>
@@ -47,9 +63,6 @@ layout: page
 	  	  </div>
 		</div>
 	</div>
-</div>
-
-<div class="row">
 	<div class="col-lg-4">
 		<div class="card mb-3">
 	  		<h3 class="card-header">Product Management</h3>
