--- a/presentations.html
+++ b/presentations.html
@@ -14,7 +14,7 @@ layout: page
 			<h3 class="card-header">Strategy</h3>
 			<div class="card-body">
 		    	<h5 class="card-title">Scenario Planning</h5>
-		    	<h6 class="card-subtitle text-muted">Immaginare il futuro in questo mondo di incertezze</h6>
+		    	<h6 class="card-subtitle text-muted">Immaginare il futuro...</h6>
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-06-03_FullTalkOnScenarioPlanning.png" alt="Presentation on Scenario Planning">
 	    		<p class="card-text">Italian version from Rinascita Digitale - June 2020.</p>
 	    		<a href="/attachment/2020-06-03_FullTalkOnScenarioPlanning.pdf" target="_blank" class="card-link">Download</a>
