--- a/presentations.html
+++ b/presentations.html
@@ -30,6 +30,7 @@ layout: page
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-05-26_FullTalkOnDataStrategy.png" alt="Presentation on Data Strategy">
     			<p class="card-text">Italian version from Rinascita Digitale - May 2020.</p>
     			<a href="/attachment/2020-05-26_FullTalkOnDataStrategy.pdf" target="_blank" class="card-link">Download</a>
+    			<a href="https://youtu.be/rkYvs_BkKto" target="_blank" class="card-link">Video</a>
   	  		</div>
 		</div>
 	</div>	
