--- a/experience.html
+++ b/experience.html
@@ -10,11 +10,11 @@ layout: page
 
 <div class="row">
   <div class="col-lg-4">
-    <div class="card-header">Senior System Engineer</div>
+    <div class="card-header">Solution Architect</div>
     <div class="card-body">
-      <h5 class="card-title">Consoft Sistemi</h5>
-      <p class="card-text">Product Management, Project Management, Process Design & Management</p>
-      <p class="card-text">From May 2011</p>
+      <h5 class="card-title">Almaviva</h5>
+      <p class="card-text">How coding could impact managerial roles</p>
+      <p class="card-text">From Jun 2020</p>
     </div>
   </div>
   <div class="col-lg-4">
@@ -36,6 +36,14 @@ layout: page
 </div>
 <div class="row">
   <div class="col-lg-4">
+    <div class="card-header">Senior System Engineer</div>
+    <div class="card-body">
+      <h5 class="card-title">Consoft Sistemi</h5>
+      <p class="card-text">Product Management, Project Management, Process Design & Management</p>
+      <p class="card-text">From May 2011 to Jun 2020</p>
+    </div>
+  </div>
+  <div class="col-lg-4">
     <div class="card-header">Software Solution Architect - Pro Bono</div>
     <div class="card-body">
       <h5 class="card-title">VoiceMed</h5>
@@ -51,6 +59,8 @@ layout: page
       <p class="card-text">From Feb 2017 to Jul 2018</p>
     </div>
   </div>
+</div>
+<div class="row">
   <div class="col-lg-4">
     <div class="card-header">Guest Lecturer</div>
     <div class="card-body">
