--- a/experience.html
+++ b/experience.html
@@ -13,7 +13,7 @@ layout: page
     <div class="card-header">Solution Architect</div>
     <div class="card-body">
       <h5 class="card-title">Almaviva</h5>
-      <p class="card-text">How coding could impact managerial roles</p>
+      <p class="card-text">Development of architectural solutions</p>
       <p class="card-text">From Jun 2020</p>
     </div>
   </div>
