--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@ layout: page
 
 <div class="row">
   <div class="col-lg-4">
-    <div class="card-header">Solution Architect</div>
+    <div class="card-header">Solutions Architect</div>
     <div class="card-body">
       <h5 class="card-title">Almaviva</h5>
       <p class="card-text">Development of architectural solutions</p>
