--- a/presentations.html
+++ b/presentations.html
@@ -18,6 +18,7 @@ layout: page
 	  			<img style="height: 200px; width: 100%; display: block;" src="/attachment/2020-06-03_FullTalkOnScenarioPlanning.png" alt="Presentation on Scenario Planning">
 	    		<p class="card-text">Italian version from Rinascita Digitale - June 2020.</p>
 	    		<a href="/attachment/2020-06-03_FullTalkOnScenarioPlanning.pdf" target="_blank" class="card-link">Download</a>
+	    		<a href="https://youtu.be/PHAJVZJ7R68" target="_blank" class="card-link">Video</a>
 	  	  </div>
 		</div>
 	</div>
