--- a/education.html
+++ b/education.html
@@ -9,35 +9,43 @@ layout: page
 </div>
 <div class="row">
   <div class="col-lg-4">
-    <div class="card-header">MSc in Artificial Intelligence</div>
-    <div class="card-body">
-      <h5 class="card-title">Università di Torino</h5>
-      <p class="card-text">Oct 2011 - Expected 2021</p>
+    <div class="card mb-3">
+      <div class="card-header">MSc in Artificial Intelligence</div>
+      <div class="card-body">
+        <h5 class="card-title">Università di Torino</h5>
+        <p class="card-text">Oct 2011 - Expected 2021</p>
+      </div>
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card-header">MSc in Disruptive Innovation</div>
-    <div class="card-body">
-      <h5 class="card-title">HULT International Business School</h5>
-      <p class="card-text">Sep 2019 - Mar 2020: GPA 3.61/4 with distinction</p>
-      <a href="/attachment/MScDisruptiveInnovation.jpg" target="_blank" class="card-link">Graduation Parchment</a>
+    <div class="card mb-3">
+      <div class="card-header">MSc in Disruptive Innovation</div>
+      <div class="card-body">
+        <h5 class="card-title">HULT International Business School</h5>
+        <p class="card-text">Sep 2019 - Mar 2020: GPA 3.61/4 with distinction</p>
+        <a href="/attachment/MScDisruptiveInnovation.jpg" target="_blank" class="card-link">Graduation Parchment</a>
+      </div>
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card-header">Master of Business Administration</div>
-    <div class="card-body">
-      <h5 class="card-title">HULT International Business School</h5>
-      <p class="card-text">Sep 2018 - Aug 2019: Track on Project Management and Marketing & Sales</p>
-      <a href="/attachment/MBAMasterBusinessAdministration.jpg" target="_blank" class="card-link">Graduation Parchment</a>
+    <div class="card mb-3">
+      <div class="card-header">Master of Business Administration</div>
+      <div class="card-body">
+        <h5 class="card-title">HULT International Business School</h5>
+        <p class="card-text">Sep 2018 - Aug 2019: Track on Project Management and Marketing & Sales</p>
+        <a href="/attachment/MBAMasterBusinessAdministration.jpg" target="_blank" class="card-link">Graduation Parchment</a>
+      </div>
     </div>
   </div>
 </div>
 <div class="row">
   <div class="col-lg-4">
-    <div class="card-header">BSc in Computer Science</div>
-    <div class="card-body">
-      <h5 class="card-title">Università di Torino</h5>
-      <p class="card-text">Oct 2002 - Oct 2011: Thesis on Multi Agent System</p>
+    <div class="card mb-3">
+      <div class="card-header">BSc in Computer Science</div>
+      <div class="card-body">
+        <h5 class="card-title">Università di Torino</h5>
+        <p class="card-text">Oct 2002 - Oct 2011: Thesis on Multi Agent System</p>
+      </div>
     </div>
   </div>
 </div>
