--- a/experience.html
+++ b/experience.html
@@ -10,63 +10,77 @@ layout: page
 
 <div class="row">
   <div class="col-lg-4">
-    <div class="card-header">Solutions Architect</div>
-    <div class="card-body">
-      <h5 class="card-title">Almaviva</h5>
-      <p class="card-text">Development of Architectural Solutions with Big Data, IoT, ML, Blockchain and GIS integrations.</p>
-      <p class="card-text">From Jun 2020</p>
+    <div class="card mb-3">
+      <div class="card-header">Solutions Architect</div>
+      <div class="card-body">
+        <h5 class="card-title">Almaviva</h5>
+        <p class="card-text">Development of Architectural Solutions with Big Data, IoT, ML, Blockchain and GIS integrations.</p>
+        <p class="card-text">From Jun 2020</p>
+      </div>
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card-header">Guest Speaker</div>
-    <div class="card-body">
-      <h5 class="card-title">Rinascita Digitale</h5>
-      <p class="card-text">Design Thinking, Data Strategy, and Scenario Planning</p>
-      <p class="card-text">From May 2020</p>
+    <div class="card mb-3">
+      <div class="card-header">Guest Speaker</div>
+      <div class="card-body">
+        <h5 class="card-title">Rinascita Digitale</h5>
+        <p class="card-text">Design Thinking, Data Strategy, and Scenario Planning</p>
+        <p class="card-text">From May 2020</p>
+      </div>
     </div>
   </div>
   <div class="col-lg-4">
-    <div class="card-header">Contributing Writer</div>
-    <div class="card-body">
-      <h5 class="card-title">Gruppo Digital360</h5>
-      <p class="card-text">Articles on Design Thinking, Data Strategy, and Scenario Planning</p>
-      <p class="card-text">From Feb 2020</p>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-lg-4">
-    <div class="card-header">Senior System Engineer</div>
-    <div class="card-body">
-      <h5 class="card-title">Consoft Sistemi</h5>
-      <p class="card-text">Product Management, Project Management, Process Design & Management</p>
-      <p class="card-text">From May 2011 to Jun 2020</p>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card-header">Software Solution Architect - Pro Bono</div>
-    <div class="card-body">
-      <h5 class="card-title">VoiceMed</h5>
-      <p class="card-text">Web and App Development</p>
-      <p class="card-text">From Apr to May 2020</p>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card-header">Corporate Business Solution Manager</div>
-    <div class="card-body">
-      <h5 class="card-title">Consoft Sistemi</h5>
-      <p class="card-text">Big Data and Analytics</p>
-      <p class="card-text">From Feb 2017 to Jul 2018</p>
+    <div class="card mb-3">
+      <div class="card-header">Contributing Writer</div>
+      <div class="card-body">
+        <h5 class="card-title">Gruppo Digital360</h5>
+        <p class="card-text">Articles on Design Thinking, Data Strategy, and Scenario Planning</p>
+        <p class="card-text">From Feb 2020</p>
+      </div>
     </div>
   </div>
 </div>
 <div class="row">
   <div class="col-lg-4">
-    <div class="card-header">Guest Lecturer</div>
-    <div class="card-body">
-      <h5 class="card-title">Comau & ESCP Business School</h5>
-      <p class="card-text">How coding could impact managerial roles</p>
-      <p class="card-text">Feb 2017</p>
+    <div class="card mb-3">
+      <div class="card-header">Senior System Engineer</div>
+      <div class="card-body">
+        <h5 class="card-title">Consoft Sistemi</h5>
+        <p class="card-text">Product Management, Project Management, Process Design & Management</p>
+        <p class="card-text">From May 2011 to Jun 2020</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Software Solution Architect - Pro Bono</div>
+      <div class="card-body">
+        <h5 class="card-title">VoiceMed</h5>
+        <p class="card-text">Web and App Development</p>
+        <p class="card-text">From Apr to May 2020</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Corporate Business Solution Manager</div>
+      <div class="card-body">
+        <h5 class="card-title">Consoft Sistemi</h5>
+        <p class="card-text">Big Data and Analytics</p>
+        <p class="card-text">From Feb 2017 to Jul 2018</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Guest Lecturer</div>
+      <div class="card-body">
+        <h5 class="card-title">Comau & ESCP Business School</h5>
+        <p class="card-text">How coding could impact managerial roles</p>
+        <p class="card-text">Feb 2017</p>
+      </div>
     </div>
   </div>
 </div>
