--- a/education.html
+++ b/education.html
@@ -22,7 +22,7 @@ layout: page
       <div class="card-header">MSc in Disruptive Innovation</div>
       <div class="card-body">
         <h5 class="card-title">HULT International Business School</h5>
-        <p class="card-text">Sep 2019 - Mar 2020: GPA 3.61/4 with distinction</p>
+        <p class="card-text">Sep 2019 - Mar 2020. GPA 3.61/4 with distinction</p>
         <a href="/attachment/MScDisruptiveInnovation.jpg" target="_blank" class="card-link">Graduation Parchment</a>
       </div>
     </div>
@@ -32,7 +32,7 @@ layout: page
       <div class="card-header">Master of Business Administration</div>
       <div class="card-body">
         <h5 class="card-title">HULT International Business School</h5>
-        <p class="card-text">Sep 2018 - Aug 2019: Track on Project Management and Marketing & Sales</p>
+        <p class="card-text">Sep 2018 - Aug 2019. GPA 3.26/4. Track on Project Management.</p>
         <a href="/attachment/MBAMasterBusinessAdministration.jpg" target="_blank" class="card-link">Graduation Parchment</a>
       </div>
     </div>
