--- a/education.html
+++ b/education.html
@@ -32,7 +32,7 @@ layout: page
       <div class="card-header">Master of Business Administration</div>
       <div class="card-body">
         <h5 class="card-title">HULT International Business School</h5>
-        <p class="card-text">Sep 2018 - Aug 2019. GPA 3.26/4. Track on Project Management.</p>
+        <p class="card-text">Sep 2018 - Aug 2019. GPA 3.26/4. Track on Project Management</p>
         <a href="/attachment/MBAMasterBusinessAdministration.jpg" target="_blank" class="card-link">Graduation Parchment</a>
       </div>
     </div>
