--- a/experience.html
+++ b/experience.html
@@ -53,7 +53,7 @@ layout: page
   </div>
   <div class="col-lg-4">
     <div class="card mb-3">
-      <div class="card-header">Software Solution Architect - Pro Bono</div>
+      <div class="card-header">Solutions Architect - Pro Bono</div>
       <div class="card-body">
         <h5 class="card-title">VoiceMed</h5>
         <p class="card-text">Web and App Development</p>
