--- a/experience.html
+++ b/experience.html
@@ -53,6 +53,16 @@ layout: page
   </div>
   <div class="col-lg-4">
     <div class="card mb-3">
+      <div class="card-header">Skill Mentor</div>
+      <div class="card-body">
+        <h5 class="card-title">European Commission</h5>
+        <p class="card-text">EUvsVirus Hackathon & Matchathon</p>
+        <p class="card-text">From Apr to May 2020</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
       <div class="card-header">Solutions Architect - Pro Bono</div>
       <div class="card-body">
         <h5 class="card-title">VoiceMed</h5>
@@ -61,6 +71,8 @@ layout: page
       </div>
     </div>
   </div>
+</div>
+<div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Corporate Business Solution Manager</div>
@@ -71,8 +83,6 @@ layout: page
       </div>
     </div>
   </div>
-</div>
-<div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Guest Lecturer</div>
