--- a/education.html
+++ b/education.html
@@ -41,6 +41,15 @@ layout: page
 <div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
+      <div class="card-header">Certificate of Popularization of Science</div>
+      <div class="card-body">
+        <h5 class="card-title">Rasoio di Occam & Università di Torino</h5>
+        <p class="card-text">Jan 2011 - Jun 2011</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
       <div class="card-header">BSc in Computer Science</div>
       <div class="card-body">
         <h5 class="card-title">Università di Torino</h5>
