--- a/education.html
+++ b/education.html
@@ -43,7 +43,7 @@ layout: page
     <div class="card mb-3">
       <div class="card-header">Certificate of Popularization of Science</div>
       <div class="card-body">
-        <h5 class="card-title">Rasoio di Occam & Università di Torino</h5>
+        <h5 class="card-title">Rasoio di Occam</h5>
         <p class="card-text">Jan 2011 - Jun 2011</p>
       </div>
     </div>
