--- a/education.html
+++ b/education.html
@@ -41,7 +41,7 @@ layout: page
 <div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
-      <div class="card-header">Postgraduate Degree in Popularization of Science</div>
+      <div class="card-header">PgDip in Popularization of Science</div>
       <div class="card-body">
         <h5 class="card-title">Rasoio di Occam</h5>
         <p class="card-text">Jan 2011 - Jun 2011</p>
