--- a/education.html
+++ b/education.html
@@ -43,8 +43,8 @@ layout: page
     <div class="card mb-3">
       <div class="card-header">PgDip in Popularization of Science</div>
       <div class="card-body">
-        <h5 class="card-title">Rasoio di Occam</h5>
-        <p class="card-text">Jan 2011 - Jun 2011</p>
+        <h5 class="card-title">Il Rasoio di Occam</h5>
+        <p class="card-text">Jan 2011 - Jun 2011. In collaboration with Università di Torino</p>
       </div>
     </div>
   </div>
