--- a/motivation.html
+++ b/motivation.html
@@ -184,3 +184,75 @@ layout: page
     </tr>
   </tbody>
 </table>
+
+<div class="row">
+  <div class="col-lg-12">
+    <h3>Project</h3>
+  </div>
+</div>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Title</th>
+      <th scope="col">Description</th>
+      <th scope="col">Date</th>
+      <th scope="col">Language</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://2020.disruptingoceanplastics.com/">Disrupting Ocean Plastics</th>
+      <td>Partnership Management & Website Creation</td>
+      <td>Feb 2020</td>
+      <td>English</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.adaday.it">Ada Lovelace Day</th>
+      <td>Project Management</td>
+      <td>Oct 2018</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="http://www.mupin.it/a-bit-of-history/">A bit of [hi]story</th>
+      <td>Project Management</td>
+      <td>May 2018</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.adaday.it">Ada Lovelace Day</th>
+      <td>Project Management</td>
+      <td>Oct 2017</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="http://www.mupin.it/a-bit-of-history/">A bit of [hi]story</th>
+      <td>Project Management</td>
+      <td>May 2017</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="https://www.adaday.it">Ada Lovelace Day</th>
+      <td>Project Management</td>
+      <td>Oct 2016</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th scope="row"><a target="_blank" href="http://www.mupin.it/a-bit-of-history/">A bit of [hi]story</th>
+      <td>Project Management</td>
+      <td>May 2016</td>
+      <td>Italian</td>
+    </tr>
+  </tbody>
+</table>
